k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thread-co-deployment
  labels:
    app: thread-co
spec:
  replicas: 3
  selector:
    matchLabels:
      app: thread-co
  template:
    metadata:
      labels:
        app: thread-co
    spec:
      containers:
      - name: thread-co-app
        image: sushmaremala/thread-co:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/store/stock
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/store/stock
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
