k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thread-co-service
spec:
  type: LoadBalancer
  selector:
    app: thread-co
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
